2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Break out ENVIRONMENT section.

	* b-environment: New file.
	* Makefile.am (bits): Add b-environment.
	* ci.1in (ENVIRONMENT): Replace section/‘.SH’ with ‘.so b-environment’.
	* co.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsclean.1in: Likewise.
	* rcsdiff.1in: Likewise.
	* rcsfreeze.1in: Likewise.
	* rcsmerge.1in: Likewise.
	* rlog.1in: Likewise.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Use soelim(1) for foo.1 generation.

	* Makefile.am (bits): New var.
	(EXTRA_DIST): Add $(bits).
	(.1in.1): Add prerequisites REL, $(bits); use soelim(1), sed(1).
	* ci.1in: Add ‘.so REL’.
	* co.1in: Likewise.
	* ident.1in: Likewise.
	* merge.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsclean.1in: Likewise.
	* rcsdiff.1in: Likewise.
	* rcsintro.1in: Likewise.
	* rcsmerge.1in: Likewise.
	* rlog.1in: Likewise.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Freeze RCS file syntax; drop ‘newphrase’ support.

	* rcsfile.5in: Remove ‘newphrase’ production components; the
	‘newphrase’ production itself; and the paragraph describing it.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Fix rcsfile(5) typo.

	* rcsfile.5in (id): Add asterisk after first production component.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Recognize ‘commitid SYMBOL’ in RCS file delta tree.

	* rcsfile.5in (delta): Add optional ‘commitid’ to production.

2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Say "file name" or "file-name" instead of "filename".

	* ci.1in: Instead of "filename", say "filename" or "file-name".
	* co.1in: Likewise.
	* ident.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsintro.1in: Likewise.
	* rlog.1in: Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't say "path" when referring to file names.

	* ci.1in: Instead of "path", say "filename" or
	"frag" or "directory component" or simply "name".
	* co.1in: Likewise.
	* ident.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsclean.1in: Likewise.